changes/5.7-rc6/78a515f9faf3af43cf9c4f61254dd1c5b3cb2d0b
drivers/ide: Fix build regression.

   drivers/ide/ide-scan-pci.c: In function 'ide_scan_pcibus':
>> drivers/ide/ide-scan-pci.c:104:13: error: incompatible type for argument 1 of 'list_del'
     104 |   list_del(d->node);
         |            ~^~~~~~
         |             |
         |             struct list_head
   In file included from include/linux/module.h:12,
                    from drivers/ide/ide-scan-pci.c:12:
   include/linux/list.h:144:47: note: expected 'struct list_head *' but argument is of type 'struct list_head'
     144 | static inline void list_del(struct list_head *entry)
         |                             ~~~~~~~~~~~~~~~~~~^~~~~

Fixes: 6a0033457f23 ("drivers/ide: convert to list_for_each_entry_safe()")
Reported-by: kbuild test robot <lkp@intel.com>
Signed-off-by: David S. Miller <davem@davemloft.net>

